--- a/app/src/main/res/layout/activity_select_slot.xml
+++ b/app/src/main/res/layout/activity_select_slot.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -8,47 +9,136 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="8dp"
+    android:background="@android:color/white"
     tools:context="com.cherry.alok.myapplication.SelectSlotActivity"
 
     android:id="@+id/selectslot_cordlayout">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.cherry.alok.myapplication.OrderActivity"
+        tools:showIn="@layout/order_parent"
+        android:id="@+id/scroll"
+        android:scrollbars="vertical|horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-        android:elevation="4dp"
         android:orientation="vertical"
         android:id="@+id/slot_form"
         android:paddingTop="4dp">
+
         <android.support.design.widget.TabLayout
             android:id="@+id/tabdate_tabs"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             app:tabBackground="@drawable/tab_bkground"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-
             app:tabMode="scrollable"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:id="@+id/lay_viewpager"
-            >
-        <android.support.v4.view.ViewPager
-            android:id="@+id/tabdate_viewpager"
-            android:layout_width="match_parent"
-            android:layout_marginTop="16dp"
-            android:layout_height="250dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
+            android:id="@+id/lay_viewpager">
+            <android.support.v4.view.ViewPager
+                android:id="@+id/tabdate_viewpager"
+                android:layout_width="match_parent"
+                android:layout_marginTop="16dp"
+                android:layout_height="250dp"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
         </LinearLayout>
+
         <View
             android:id="@+id/line_slot"
             style="@style/LineViewStyleLight"
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:inputType="textMultiLine"
+            android:ems="10"
+            android:id="@+id/addinst_editText"
+            android:gravity="bottom|center_horizontal"
+            android:scrollbars="vertical"
+            android:hint="Additional instructions (if any)"
+            android:layout_gravity="center_horizontal"
+            android:maxLength="500"/>
+
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:dividerPadding="1dp"
+            android:orientation="vertical"
+            android:id="@+id/toplayout">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_weight="0.5">
+                <ImageView
+                    android:id="@+id/carlogo"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="0.2"
+                    android:src="@drawable/hyundai_cars"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat"
+                    android:textSize="20sp"
+                    android:shadowColor="#00ccff"
+                    android:shadowRadius="1.5"
+                    android:shadowDx="1"
+                    android:shadowDy="1"
+                    android:id="@+id/request_car_text"
+                    android:layout_weight="0.6" />
+                <Button
+                    android:id="@+id/carselect"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="0.2"
+                    android:background="@drawable/car_option_garage"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp">
+                <Button
+                    android:id="@+id/confirm_request"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="4dp"
+                    android:text="REQUEST YOUR SERVICE"
+                    android:shadowColor="#00ccff"
+                    android:shadowRadius="1.5"
+                    android:shadowDx="1"
+                    android:shadowDy="1"
+
+                    style="@style/ButtonStylePositiveBlue"/>
+            </LinearLayout>
+
+
+
+        </LinearLayout>
+
+        <!--LinearLayout
             android:id="@+id/addtion_inst"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -64,12 +154,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:text="Your Additional Instructions For Wash"/>
-        </LinearLayout>
+        </LinearLayout-->
 
 
     </LinearLayout>
 
-    <LinearLayout
+    <!--LinearLayout
         android:id="@+id/addtion_inst2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -122,20 +212,18 @@
 
 
         </android.support.v7.widget.CardView>
-    </LinearLayout>
+    </LinearLayout-->
 
 
 
-   <!-- <ProgressBar
-        android:id="@+id/loadingdata_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:visibility="gone"
-        />-->
-    <include layout="@layout/bottom_sheet_selectslot"
+</ScrollView>
+
+
+
+
+
+    <!--include layout="@layout/bottom_sheet_selectslot"
         android:id="@+id/selectslot_bottom_sheet"
-        android:elevation="8dp"/>
+        android:elevation="8dp"/-->
 
 </android.support.design.widget.CoordinatorLayout>
