--- a/app/src/main/res/layout/list_single.xml
+++ b/app/src/main/res/layout/list_single.xml
@@ -1,39 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    <TableRow android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <TableRow
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/SlotNameText"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:orientation="vertical"
-
             android:layout_marginLeft="10dp"
-            android:layout_weight="0.8">
-        <TextView
-            android:id="@+id/txt"
-            android:layout_weight="0.8"
-            android:layout_width="wrap_content"
-            android:textAlignment="center"
-            android:layout_gravity="center_vertical"
-            android:layout_height="50dp"
-            android:textSize="20sp"/>
+            android:layout_weight="0.9"
+            android:orientation="vertical">
+
             <TextView
+                android:id="@+id/txt"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="Title"
+                android:textSize="20sp" />
+
+            <!--TextView
                 android:id="@+id/subtitle"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_weight="0.2"
-                android:textSize="10sp"
-                android:text="" />
-    </LinearLayout>
-        <ImageView
-            android:id="@+id/img"
-            android:layout_weight="0.2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            />
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
+                android:text=""
+                android:textSize="15sp" /-->
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_weight="0.1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img"
+                android:layout_marginTop="15dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:gravity="center|center_vertical" />
+
+        </LinearLayout>
+
+
     </TableRow>
 </TableLayout>
