--- a/app/src/main/res/drawable/button_background_normal_blue.xml
+++ b/app/src/main/res/drawable/button_background_normal_blue.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- selector xmlns:android="http://schemas.android.com/apk/res/android" -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+<!--    <item>
         <shape android:shape="rectangle">
             <solid android:color="#86c3e7" />
             <corners android:radius="0dp" />
-       <!--     <stroke android:width="1dp" android:color="#47aae4"/>-->
+       &lt;!&ndash;     <stroke android:width="1dp" android:color="#47aae4"/>&ndash;&gt;
         </shape>
-    </item>
-    <item android:bottom="7dp">
+    </item>-->
+    <item android:bottom="0dp">
         <shape android:shape="rectangle">
-            <solid android:color="#1181bf" />
+            <solid android:color="#7c4dff" />
             <corners android:radius="0dp" />
-            <stroke android:width="1dp" android:color="#559bc2" />
+            <stroke android:width="1dp" android:color="#7c4dff" />
         </shape>
     </item>
 </layer-list>
