--- a/app/src/main/res/layout/activity_addcar_toolbar.xml
+++ b/app/src/main/res/layout/activity_addcar_toolbar.xml
@@ -8,11 +8,10 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/addcar_appbar"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.design.widget.CollapsingToolbarLayout
+       <!-- <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/addcar_collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -20,24 +19,27 @@
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginEnd="32dp"
             app:expandedTitleMarginStart="24dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
-
-            <ImageView
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+            >
+-->
+            <!--<ImageView
                 android:id="@+id/addcar_header"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax" />-->
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/addcar_anim_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay"  />
 
+<!--
         </android.support.design.widget.CollapsingToolbarLayout>
+-->
 
 
 
