--- a/app/src/main/res/layout/activity_services_toolbar.xml
+++ b/app/src/main/res/layout/activity_services_toolbar.xml
@@ -9,11 +9,10 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/services_appbar"
         android:layout_width="match_parent"
-        android:layout_height="192dp"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.design.widget.CollapsingToolbarLayout
+<!--        <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/services_collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -21,24 +20,24 @@
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">-->
 
-            <ImageView
+         <!--   <ImageView
                 android:id="@+id/services_header"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax" />-->
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/services_anim_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay"  />
 
-        </android.support.design.widget.CollapsingToolbarLayout>
+       <!-- </android.support.design.widget.CollapsingToolbarLayout>-->
 
     </android.support.design.widget.AppBarLayout>
 
