--- a/app/src/main/res/layout/recycler_service_type.xml
+++ b/app/src/main/res/layout/recycler_service_type.xml
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:textSize="18sp"
-                android:textColor="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
+                android:textColor="@color/colorPrimary"
                 android:layout_weight="0.5"
                 android:text="More Details ...."
 
