--- a/app/src/main/res/layout/services_small_bottomsheet.xml
+++ b/app/src/main/res/layout/services_small_bottomsheet.xml
@@ -9,8 +9,47 @@
     android:background="#00ffffff"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="#00ffffff"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="@android:color/white"
+            android:elevation="2dp"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+                <Button
+                    android:id="@+id/service_select_next"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
 
-        <FrameLayout
+                    android:layout_marginLeft="5dp"
+
+                    android:text="Next"
+                    android:shadowColor="#00ccff"
+                    android:shadowRadius="1.5"
+                    android:shadowDx="1"
+                    android:shadowDy="1"
+                    style="@style/ButtonStylePositiveBlue2"
+                    />
+
+            </LinearLayout>
+
+
+
+
+        </LinearLayout>
+
+    </FrameLayout>
+        <!--<FrameLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:background="#00ffffff"
@@ -24,33 +63,12 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.7">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/service_cost_small_btmsheet"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="10dp"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:textColor="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
-                        android:layout_weight="1.0"/>
+                    >
 
-                    </LinearLayout>
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.3">
                     <Button
                         android:id="@+id/service_select_next"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="45dp"
                         android:layout_marginLeft="5dp"
                         android:text="Next"
                         android:enabled="false"
@@ -60,12 +78,11 @@
                         android:shadowDy="1"
                         style="@style/ButtonStylePositiveBlue2"
                         />
-                </LinearLayout>
-
 
 
             </LinearLayout>
+            </LinearLayout>
 
-        </FrameLayout>
+        </FrameLayout>-->
 
 </android.support.v4.widget.NestedScrollView>
