--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#dc6900</color>
-    <color name="colorPrimaryDark">#e0301e</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#5e35b1</color>
+    <color name="colorPrimaryDark">#4527a0</color>
+    <color name="colorAccent">#4527a0</color><!--text color-->
     <color name="blue_grey_500">#607D8B</color>
     <color name="blue_grey_600">#546E7A</color>
     <color name="blue_grey_700">#455A64</color>
